add register user page

--- a/WAPP_G12/WAPP_G12.csproj
+++ b/WAPP_G12/WAPP_G12.csproj
@@ -189,6 +189,7 @@
     <Content Include="Styles\site.css" />
     <Content Include="Site.Master" />
     <Content Include="ViewSwitcher.ascx" />
+    <Content Include="Admin\ViewUserList.aspx" />
     <Content Include="Web.config" />
     <Content Include="Bundle.config" />
     <Content Include="Site.Mobile.Master" />
@@ -276,6 +277,13 @@
     </Compile>
     <Compile Include="ViewSwitcher.ascx.designer.cs">
       <DependentUpon>ViewSwitcher.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\ViewUserList.aspx.cs">
+      <DependentUpon>ViewUserList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\ViewUserList.aspx.designer.cs">
+      <DependentUpon>ViewUserList.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup />
