--- a/WAPP_G12/WAPP_G12.csproj
+++ b/WAPP_G12/WAPP_G12.csproj
@@ -188,6 +188,7 @@
     <Content Include="Scripts\WebForms\WebUIValidation.js" />
     <Content Include="Styles\site.css" />
     <Content Include="Site.Master" />
+    <Content Include="Account\UpdateProfile.aspx" />
     <Content Include="User\UserHomePage.aspx" />
     <Content Include="ViewSwitcher.ascx" />
     <Content Include="Admin\ViewUserList.aspx" />
@@ -271,6 +272,13 @@
     </Compile>
     <Compile Include="Site.Mobile.Master.designer.cs">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Account\UpdateProfile.aspx.cs">
+      <DependentUpon>UpdateProfile.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Account\UpdateProfile.aspx.designer.cs">
+      <DependentUpon>UpdateProfile.aspx</DependentUpon>
     </Compile>
     <Compile Include="User\UserHomePage.aspx.cs">
       <DependentUpon>UserHomePage.aspx</DependentUpon>
